2010-04-27 Ivan Kojadinovic <ivan@stat.auckland.ac.nz> and Jun Yan <jyan@stat.uconn.edu
	* Replaced .Machine$double.xmax^.5 with sqrt(.Machine$double.xmax)
	in Copula.R to get around the CRAN check error on windows64-x86_64.

2010-04-27 Ivan Kojadinovic <ivan@stat.auckland.ac.nz> and Jun Yan <jyan@stat.uconn.edu>

	* Improved evTestC.
	* Added calibKendallsTau and calibSpearmansRho for the FGM copula.
	* Improved documentation and changed CITATION file.

2010-03-15 Ivan Kojadinovic <ivan@stat.auckland.ac.nz> and Jun Yan <jyan@stat.uconn.edu>

	* Corrected a bug in rcopula for claytonCopula for dim >= 3.
	Thanks to Zhongyi Yuan <zhongyi-yuan@uiowa.edu>.
	* Added mvtnorm in NAMESPACE to make the package work if these 
	functions are overwritten by other packages:
	importFrom(mvtnorm, dmvnorm, pmvnorm, dmvt, pmvt)
	
2009-10-07 Ivan Kojadinovic <ivan@stat.auckland.ac.nz> and Jun Yan <jyan@stat.uconn.edu>

	* Removed dependence on package adapt, which has been withdrawn from CRAN
	due to license issues.

2009-09-22 Ivan Kojadinovic <ivan@stat.auckland.ac.nz> and Jun Yan <jyan@stat.uconn.edu>

	* Added the function evTest that can be used to test whether data come from
	an extreme-value copula. 

2009-07-28 Ivan Kojadinovic <ivan@stat.auckland.ac.nz> and Jun Yan <jyan@stat.uconn.edu>

	* Fixed a bug in rcopula for claytonCopula when dependence is negative. 
	Thanks to Dominik Sznajder <dominik.sznajder@wis.kuleuven.be> for 
	reporting it.

2009-07-23 Ivan Kojadinovic <ivan@stat.auckland.ac.nz> and Jun Yan <jyan@stat.uconn.edu>

	* Fixed a bug in rcopula for frankCopula when dependence is negative.
	* Default df for tCopula and tevCopula are set at 4.

2009-06-04 Ivan Kojadinovic <ivan@stat.auckland.ac.nz> and Jun Yan <jyan@stat.uconn.edu>

	* Significantly improved the multiplier version of gofCopula. 
	There are no more repeatability problems and the test is slightly 
	faster. Documentation updated.

	* Fixed various warning messages. 
